<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layoutDirection="ltr"

    tools:openDrawer="start">
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:id="@+id/toolbar"
            android:layout_height="@dimen/_45sdp"
            android:background="@color/colorPrimary">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/menu"
                    android:layout_width="@dimen/_25sdp"
                    android:layout_height="@dimen/_19sdp"
                    android:layout_centerVertical="true"
                    android:layout_gravity="center"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:background="@drawable/menu" />


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:text="@string/home"
                    android:gravity="center"
                    android:layout_weight="1"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_16sdp" />


            </LinearLayout>

        </RelativeLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/category"
            android:textSize="@dimen/_22sdp"
            android:textStyle="bold"
            android:layout_margin="@dimen/_10sdp"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/_100sdp"

            android:orientation="horizontal">

            <Button
                android:id="@+id/drawing"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/buttonshape_red"
                android:text="@string/Draw"
                android:layout_margin="@dimen/_10sdp"
               android:layout_weight="0.5"
                android:textSize="@dimen/_15sdp"
                android:textStyle="italic"
                android:textColor="@color/white"/>
            <Button
                android:id="@+id/carpentry"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/buttonshape_red"
                android:text="@string/Carpentry"
                android:layout_margin="@dimen/_10sdp"
                android:layout_weight="0.5"
                android:textSize="@dimen/_15sdp"
                android:textStyle="italic"
                android:textColor="@color/white"/>
        </LinearLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/most_active_craftsman"
            android:textSize="@dimen/_20sdp"
            android:textStyle="bold"
            android:layout_margin="@dimen/_10sdp"
            />
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler"
            android:layout_width="match_parent"
            android:layout_marginTop="@dimen/_5sdp"
            android:layout_below="@+id/toolbar"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_height="wrap_content" />


    </LinearLayout>
</ScrollView>
    <com.google.android.material.navigation.NavigationView
        android:id="@+id/nvView"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"

        app:headerLayout="@layout/nav_header"
        app:menu="@menu/drawer" />


</androidx.drawerlayout.widget.DrawerLayout>
