<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_sp"

    android:layoutDirection="ltr"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_marginStart="@dimen/_20sdp"
        android:layout_marginEnd="@dimen/_20sdp"
        card_view:cardCornerRadius="10dp"
        android:id="@+id/cv"
        card_view:cardElevation="@dimen/_1sdp"
        card_view:cardUseCompatPadding="true">



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Lets Join Us"
                android:layout_marginTop="@dimen/_15sdp"
                android:textColor="@color/colorAccent"
                android:textSize="@dimen/_22sdp"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="We would love you to join us"
                android:textColor="@color/colorAccent"
                android:textSize="@dimen/_10sdp"
                />

            <RelativeLayout

                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_15sdp"
                        android:visibility="visible"
                        android:id="@+id/a1"
                        android:layout_marginEnd="@dimen/_15sdp"
                        android:orientation="vertical">
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:orientation="vertical"
                            android:layout_marginTop="@dimen/_5sdp"

                            android:layout_height="wrap_content">

                            <RadioGroup
                                android:layout_width="match_parent"
                                android:weightSum="1"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="@dimen/_5sdp"
                                android:orientation="horizontal">

                                <RadioButton
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:layout_weight=".5"
                                    android:id="@+id/radio_C"
                                    android:textSize="@dimen/_10sdp"
                                    android:text="@string/Customer"/>
                                <RadioButton
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:layout_weight=".5"
                                    android:id="@+id/radio_P"
                                    android:textSize="@dimen/_10sdp"
                                    android:text="@string/Craftsmen"/>
                            </RadioGroup>



                        </LinearLayout>
                        <EditText
                            android:layout_width="match_parent"
                            android:layout_height="@dimen/_35sdp"
                            android:inputType="text"
                            android:background="@drawable/rounded_edittext_gray"
                            android:ems="10"
                            android:textColorHint="#C9C9C9"
                            android:hint="@string/enter_name"
                            android:textSize="@dimen/_12sdp"
                            android:layout_marginTop="@dimen/_10sdp"
                            android:id="@+id/editName"
                            android:gravity="start|center_vertical"/>
                        <EditText
                            android:layout_width="match_parent"
                            android:layout_height="@dimen/_35sdp"
                            android:inputType="textEmailAddress"
                            android:background="@drawable/rounded_edittext_gray"
                            android:ems="10"
                            android:textColorHint="#C9C9C9"
                            android:hint="@string/enter_email"
                            android:textSize="@dimen/_12sdp"
                            android:layout_marginTop="@dimen/_5sdp"
                            android:id="@+id/editEmail"
                            android:gravity="start|center_vertical"/>
                        <EditText
                            android:layout_width="match_parent"
                            android:layout_height="@dimen/_35sdp"
                            android:inputType="textPassword"
                            android:hint="@string/enter_password"
                            android:textColorHint="#C9C9C9"
                            android:background="@drawable/rounded_edittext_gray"
                            android:textSize="@dimen/_12sdp"
                            android:layout_marginTop="@dimen/_5sdp"
                            android:id="@+id/editPassword"
                            android:gravity="start|center_vertical"/>

                        <EditText
                            android:layout_width="match_parent"
                            android:layout_height="@dimen/_35sdp"
                            android:inputType="phone"
                            android:hint="@string/enter_phone"
                            android:textColorHint="#C9C9C9"
                            android:background="@drawable/rounded_edittext_gray"
                            android:textSize="@dimen/_12sdp"
                            android:layout_marginTop="@dimen/_5sdp"
                            android:id="@+id/phone_number"
                            android:gravity="start|center_vertical"/>

                        <Spinner
                            android:layout_width="match_parent"
                            android:layout_height="@dimen/_35sdp"
                            android:hint="cities"
                            android:textColorHint="#C9C9C9"
                            android:textSize="@dimen/_10sdp"
                            android:id="@+id/cities"/>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:weightSum="2"
                            android:layout_height="wrap_content">

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_weight="1"
                                android:layout_marginTop="@dimen/_5sdp"
                                android:layout_marginEnd="@dimen/_5sdp"
                                android:background="@drawable/rounded_edittext_gray"
                                android:layout_height="wrap_content">
                                <Spinner
                                    android:visibility="gone"
                                    android:layout_width="match_parent"
                                    android:layout_height="@dimen/_35sdp"
                                    android:hint="@string/category"
                                    android:textColorHint="#A19F9F"
                                    android:textSize="@dimen/_10sdp"
                                    android:id="@+id/category"/>

                            </LinearLayout>


                        </LinearLayout>




                        <Button
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:id="@+id/buttonRegister"
                            android:background="@drawable/buttonshape_green"
                            android:layout_marginTop="@dimen/_10sdp"
                            android:textColor="@color/white"

                            android:layout_marginBottom="@dimen/_10sdp"
                            android:textSize="@dimen/_14sdp"
                            android:text="@string/sign_up"/>

                    </LinearLayout>




                </LinearLayout>


            </RelativeLayout>

        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/cv"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:layout_marginBottom="@dimen/_5sdp"
            android:id="@+id/buttonLogin"
            android:textColor="@color/white"
            android:textSize="@dimen/_15sdp"/>
    </LinearLayout>

</RelativeLayout>

